another fix to aligning.

--- a/survival.css
+++ b/survival.css
@@ -8,6 +8,7 @@ html {
        width: 800px;
        height: 100%;
       text-align: center;
+      color: yellow
     }
 
     .wrapimage{ float:right;
@@ -18,7 +19,7 @@ html {
         padding:2px;
         font-size:30 ;
         display: block;
-        color:green;
+        color:yellow;
         text-align: center;
     }
 
@@ -59,6 +60,7 @@ html {
         width: 73%;
         display: inline-block;
         text-align: center;;
+        color: yellow;
     }
     aside {
         width: 17%;
@@ -66,14 +68,15 @@ html {
         background-color:;
         padding:;
         min-height: 100%;
+        color: yellow;
     }
     aside ul {
         list-style-type: none;
     }
     footer {
         width: 790px;
-        background-color:green;
-        color:black;
+        background-color:yellow;
+        color:yellow;
         clear: both;
         display: block;
     }
